hphp/hack/test/typecheck/reified_generics/new_without_newable_simple.php.exp
File "new_without_newable_simple.php", line 5, characters 7-7:
Generics are not allowed in this position. (Typing[4306])
